--- a/12.小练习.html
+++ b/12.小练习.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-07 13:01:24
- * @LastEditTime: 2021-11-07 13:43:35
+ * @LastEditTime: 2021-11-08 09:57:39
  * @LastEditors: Please set LastEditors
  * @Description: 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
  * @FilePath: \cavans\12.小练习.html
@@ -24,6 +24,7 @@
     }
     #input {
       margin-bottom: 10px;
+      border: 1px solid #d3d3d3;
     }
     #myCanvas {
       border:1px solid #d3d3d3;
